--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "顺丰丰桥系统对接PHP版",
     "type": "library",
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "guzzlehttp/guzzle": "^6.0|^7.0",
         "ext-libxml": "*",
         "ext-simplexml": "*",
